# escargot

./: .gitmodules  CMakeLists.txt  README.md
include/escargot/: escargot.hxx
include/escargot/algorithm/: affinity_watershed.hxx  affinity_watershed_parallel.hxx
include/escargot/algorithms/: graphWatershed.hxx
include/escargot/graph/: rag.hxx
include/escargot/graphs/: dummy.txt
include/escargot/marray/: marray.hxx  py_marray.hxx
include/escargot/tools/: threadpool.hxx  tools.hxx  ufd.hxx
src/: CMakeLists.txt
src/python/lib/: CMakeLists.txt  converter.hxx  escargot.cxx  escargot_module.cxx
src/python/lib/algorithm/: algorithm.cxx
src/python/module/: __init__.py
src/python/test/: test_affinity_ws.py
src/test/: CMakeLists.txt
src/test/algorithm/: CMakeLists.txt  test_affinity_watershed.cxx
src/test/tools/: CMakeLists.txt  test_combinations.cxx  test_threadpool.cxx
